[tool.poetry]
name = "ygpt"
version = "0.1.0"
description = ""
authors = ["Sergei Silnov <po@kumekay.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
torch = "^1.13.1"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
